--- a/css/sample.css
+++ b/css/sample.css
@@ -17,7 +17,7 @@ html {
   
   /* From here */
   header {
-      background-color: rgb(51, 50, 50);
+      background-color:pink;
       height: 70px;
   }
   
